# ssh-adverb

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
debian/: changelog  control  copyright  rules
src/: Makefile.am  ssh-adverb.1  ssh-adverb.cc
test/: Makefile.am  ssh-do  ssh-report  test-help  test-no-command  test-no-host  test-options  test-options-c-3des-expect  test-options-c3des-expect  test-options-t-expect  test-options-tc3des-expect  test-redirect  test-redirect-do-expect  test-redirect-expect  test-star  test-star-do-expect  test-star-expect  test-trivial  test-trivial-do-expect  test-trivial-expect  test-version
