#
# This file is part of ssh-adverb.
# Copyright (C) 2015 Richard Kettlewell
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
TESTS=test-version test-help test-no-host test-no-command \
	test-trivial test-star test-redirect test-options
EXTRA_DIST=${TESTS} \
	ssh-report ssh-do \
	test-trivial-expect test-star-expect test-redirect-expect \
	test-trivial-do-expect test-star-do-expect test-redirect-do-expect \
	test-options-c-3des-expect test-options-c3des-expect \
	test-options-tc3des-expect test-options-t-expect

export top_srcdir
